--- a/vmg/vimage.ui
+++ b/vmg/vimage.ui
@@ -93,6 +93,7 @@
     </widget>
     <addaction name="actionOpen"/>
     <addaction name="menuOpen_Recent"/>
+    <addaction name="actionSave_As"/>
     <addaction name="separator"/>
     <addaction name="actionExit"/>
    </widget>
@@ -115,6 +116,11 @@
   <action name="actionSomething">
    <property name="text">
     <string>Something</string>
+   </property>
+  </action>
+  <action name="actionSave_As">
+   <property name="text">
+    <string>Save As...</string>
    </property>
   </action>
  </widget>
