Use makefile to update Ui, because PySide6/loadUiType/PyInstaller/pkg_resources combo does not work. Add two action icons.

--- a/vmg/vimage.ui
+++ b/vmg/vimage.ui
@@ -41,7 +41,7 @@
          <x>0</x>
          <y>0</y>
          <width>322</width>
-         <height>241</height>
+         <height>215</height>
         </rect>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -100,6 +100,19 @@
    <addaction name="menuFile"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionOpen"/>
+   <addaction name="actionSave_As"/>
+  </widget>
   <action name="actionOpen">
    <property name="text">
     <string>Open...</string>
@@ -111,11 +124,6 @@
    </property>
    <property name="menuRole">
     <enum>QAction::QuitRole</enum>
-   </property>
-  </action>
-  <action name="actionSomething">
-   <property name="text">
-    <string>Something</string>
    </property>
   </action>
   <action name="actionSave_As">
