--- a/vmg/vimage.ui
+++ b/vmg/vimage.ui
@@ -66,14 +66,24 @@
     <addaction name="actionFull_Screen"/>
    </widget>
    <widget class="QMenu" name="menuTest">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="title">
      <string>Test</string>
     </property>
     <addaction name="actionRun_Test"/>
    </widget>
+   <widget class="QMenu" name="menuHelp">
+    <property name="title">
+     <string>Help</string>
+    </property>
+    <addaction name="actionAbout"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuView"/>
    <addaction name="menuTest"/>
+   <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QToolBar" name="toolBar">
@@ -173,6 +183,14 @@
   <action name="actionRun_Test">
    <property name="text">
     <string>Run Test</string>
+   </property>
+  </action>
+  <action name="actionAbout">
+   <property name="text">
+    <string>About</string>
+   </property>
+   <property name="menuRole">
+    <enum>QAction::AboutRole</enum>
    </property>
   </action>
  </widget>
