--- a/vmg/vimage.ui
+++ b/vmg/vimage.ui
@@ -115,6 +115,9 @@
    </property>
   </action>
   <action name="actionSave_As">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Save As...</string>
    </property>
