--- a/vmg/vimage.ui
+++ b/vmg/vimage.ui
@@ -144,7 +144,7 @@
     <bool>false</bool>
    </property>
    <property name="text">
-    <string>Save Original Image As...</string>
+    <string>Save As...</string>
    </property>
   </action>
   <action name="actionNext">
