--- a/vmg/vimage.ui
+++ b/vmg/vimage.ui
@@ -28,7 +28,11 @@
      <number>0</number>
     </property>
     <item>
-     <widget class="ImageWidgetGL" name="imageWidgetGL"/>
+     <widget class="ImageWidgetGL" name="imageWidgetGL">
+      <property name="focusPolicy">
+       <enum>Qt::StrongFocus</enum>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
