Upload textures in the ImageLoader thread [TODO: placeholder and thumbnail] Create OffscreenContext class so signaling context creation could work for some reason. Borrow excepthook code from schmereo (but not using it yet)

--- a/vmg/log.ui
+++ b/vmg/log.ui
@@ -43,7 +43,7 @@
       <item>
        <widget class="QComboBox" name="comboBox">
         <property name="currentText">
-         <string>Critical</string>
+         <string>Info</string>
         </property>
         <property name="insertPolicy">
          <enum>QComboBox::NoInsert</enum>
